# ChaosSubs

./: README.md  TODO-v0.2.0.md  cli.py  pyproject.toml  requirements.txt  run.py
app/: audio_utils.py  config.py  job_manager.py  main.py  scheduler.py  srt_utils.py  tasks.py  translate.py
static/: app.js  index.html  state.js  style.css  view.js
